content/cli/v11/commands/npm-pack.mdx
---
title: npm-pack
section: 1
description: Create a tarball from a package
github_repo: npm/cli
github_branch: latest
github_path: docs/lib/content/commands/npm-pack.md
redirect_from:
  - /cli-commands/npm-pack
  - /cli-commands/pack
  - /cli-documentation/cli-commands/npm-pack
  - /cli-documentation/cli-commands/pack
  - /cli-documentation/commands/npm-pack
  - /cli-documentation/commands/pack
  - /cli-documentation/npm-pack
  - /cli-documentation/pack
  - /cli-documentation/v11/cli-commands/npm-pack
  - /cli-documentation/v11/cli-commands/pack
  - /cli-documentation/v11/commands/npm-pack
  - /cli-documentation/v11/commands/pack
  - /cli-documentation/v11/npm-pack
  - /cli-documentation/v11/pack
  - /cli/cli-commands/npm-pack
  - /cli/cli-commands/pack
  - /cli/commands/npm-pack
  - /cli/commands/pack
  - /cli/npm-pack
  - /cli/pack
  - /cli/v11/cli-commands/npm-pack
  - /cli/v11/cli-commands/pack
  - /cli/v11/commands/pack
  - /cli/v11/npm-pack
  - /cli/v11/pack
  - /commands/npm-pack
  - /commands/pack
---

### Synopsis

```bash
npm pack <package-spec>
```

### Configuration

#### `dry-run`

- Default: false
- Type: Boolean

Indicates that you don't want npm to make any changes and that it should only report what it would have done. This can be passed into any of the commands that modify your local installation, eg, `install`, `update`, `dedupe`, `uninstall`, as well as `pack` and `publish`.

Note: This is NOT honored by other network related commands, eg `dist-tags`, `owner`, etc.

#### `json`

- Default: false
- Type: Boolean

Whether or not to output JSON data, rather than the normal output.

- In `npm pkg set` it enables parsing set values with JSON.parse() before saving them to your `package.json`.

Not supported by all npm commands.

#### `pack-destination`

- Default: "."
- Type: String

Directory in which `npm pack` will save tarballs.

#### `workspace`

- Default:
- Type: String (can be set multiple times)

Enable running a command in the context of the configured workspaces of the current project while filtering by running only the workspaces defined by this configuration option.

Valid values for the `workspace` config are either:

- Workspace names
- Path to a workspace directory
- Path to a parent workspace directory (will result in selecting all workspaces within that folder)

When set for the `npm init` command, this may be set to the folder of a workspace which does not yet exist, to create the folder and set it up as a brand new workspace within the project.

This value is not exported to the environment for child processes.

#### `workspaces`

- Default: null
- Type: null or Boolean

Set to true to run the command in the context of **all** configured workspaces.

Explicitly setting this to false will cause commands like `install` to ignore workspaces altogether. When not set explicitly:

- Commands that operate on the `node_modules` tree (install, update, etc.) will link workspaces into the `node_modules` folder. - Commands that do other things (test, exec, publish, etc.) will operate on the root project, _unless_ one or more workspaces are specified in the `workspace` config.

This value is not exported to the environment for child processes.

#### `include-workspace-root`

- Default: false
- Type: Boolean

Include the workspace root when workspaces are enabled for a command.

When false, specifying individual workspaces via the `workspace` config, or all workspaces via the `workspaces` flag, will cause npm to operate only on the specified workspaces, and not on the root project.

This value is not exported to the environment for child processes.

#### `ignore-scripts`

- Default: false
- Type: Boolean

If true, npm does not run scripts specified in package.json files.

Note that commands explicitly intended to run a particular script, such as `npm start`, `npm stop`, `npm restart`, `npm test`, and `npm run-script` will still run their intended script if `ignore-scripts` is set, but they will _not_ run any pre- or post-scripts.

### Description

For anything that's installable (that is, a package folder, tarball, tarball url, git url, name@tag, name@version, name, or scoped name), this command will fetch it to the cache, copy the tarball to the current working directory as `<name>-<version>.tgz`, and then write the filenames out to stdout.

If the same package is specified multiple times, then the file will be overwritten the second time.

If no arguments are supplied, then npm packs the current package folder.

### See Also

- [package spec](/cli/v11/using-npm/package-spec)
- [npm-packlist package](http://npm.im/npm-packlist)
- [npm cache](/cli/v11/commands/npm-cache)
- [npm publish](/cli/v11/commands/npm-publish)
- [npm config](/cli/v11/commands/npm-config)
- [npmrc](/cli/v11/configuring-npm/npmrc)
